--- a/index.html
+++ b/index.html
@@ -1,74 +1,132 @@
-<!-- SOLO EL BODY Y CSS AJUSTADOS -->
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Para ti 💌</title>
 <style>
+* { margin: 0; padding: 0; box-sizing: border-box; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+
 body {
-  min-height:100vh;
-  background:#f8b4c6;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:flex-start;
-  padding:20px;
-  overflow-x:hidden;
-  transition: background 1s;
+  min-height: 100vh;
+  background: #f8b4c6; /* fondo rosado inicial */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 20px;
+  overflow-x: hidden;
 }
 
-body.opened {
-  background: #f8b4c6 url('fondo-flores.jpg') no-repeat center top;
-  background-size: contain;
+/* TEXTO HINT */
+.hint {
+  color: white;
+  font-size: 20px;
+  margin-bottom: 20px;
+  text-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  animation: float 2s infinite;
+  transition: all 0.8s;
+  z-index: 10;
 }
+.hint.hide { opacity: 0; transform: translateY(-30px); }
+@keyframes float { 0%,100% {transform:translateY(0);} 50% {transform:translateY(-8px);} }
 
-.hint { color:white; font-size:20px; margin-bottom:30px; text-shadow:0 2px 10px rgba(0,0,0,0.3); animation:float 2s infinite; transition:all 0.8s; }
-.hint.hide { opacity:0; transform:translateY(-30px); }
-
-.envelope-container { width:320px; height:220px; position:relative; cursor:pointer; margin-bottom:50px; z-index:2; }
-.envelope { width:100%; height:100%; background:#ff6f91; border-radius:8px; position:relative; overflow:hidden; box-shadow:0 15px 35px rgba(0,0,0,0.3); animation:idle 3s infinite ease-in-out; transition:transform 0.3s; }
-.envelope:hover { transform:scale(1.02); }
-.flap { position:absolute; top:0; left:0; width:100%; height:100%; background:#ff8fab; clip-path:polygon(0 0,100% 0,50% 50%); transform-origin:top center; transition: transform 1.2s ease; z-index:3; }
-.envelope-container.open .flap { transform: rotateX(180deg); }
+/* SOBRE */
+.envelope-container { width: 320px; height: 220px; position: relative; cursor: pointer; margin-bottom: 40px; z-index: 2; }
+.envelope { width: 100%; height: 100%; background: #ff6f91; border-radius: 8px; position: relative; overflow: hidden; box-shadow: 0 15px 35px rgba(0,0,0,0.3); transition: transform 0.3s; animation: idle 3s infinite ease-in-out; }
+.envelope:hover { transform: scale(1.02); }
+@keyframes idle { 0%,100%{transform:scale(1);}50%{transform:scale(1.05);} }
+.flap { position:absolute; top:0; left:0; width:100%; height:100%; background:#ff8fab; clip-path: polygon(0 0, 100% 0, 50% 50%); transform-origin:top center; transition: transform 1.2s ease; z-index:3; }
 .envelope-container.open .envelope { animation: chest 1s forwards; }
+.envelope-container.open .flap { transform: rotateX(180deg); }
+@keyframes chest {0%{transform:scale(1);}30%{transform:scale(1.1) rotate(2deg);}50%{transform:scale(1.15) rotate(-2deg);}70%{transform:scale(1.1) rotate(2deg);}100%{transform:scale(1); }}
 
-@keyframes idle {0%,100%{transform:scale(1);}50%{transform:scale(1.05);}}
-@keyframes chest {0%{transform:scale(1);}50%{transform:scale(1.15) rotate(-2deg);}100%{transform:scale(1);}}
-
+/* CARTA */
 .letter {
-  background: transparent; /* transparente para que se vea el contorno de flores */
-  max-width: 420px;
-  width: 85%;
-  border-radius:15px;
-  padding:15px 10px 20px 10px;
-  margin:0 auto;
-  box-shadow:0 15px 35px rgba(0,0,0,0.2);
-  opacity:1;
-  transition: all 1s ease;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
+  position: relative;
+  background: transparent; /* carta transparente */
+  padding: 20px;
+  border-radius: 15px;
+  max-width: 460px;
+  width: 90%;
+  margin: 0 auto;
+  box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+  transform: scale(0.55) translateY(0);
+  opacity: 0;
+  transition: all 1.2s ease;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.letter.hide { opacity:0; transform:translateY(-200px); } /* desaparece al abrir */
+/* Fondo de flores dentro de la carta */
+.letter::before {
+  content:"";
+  position:absolute;
+  inset:0;
+  background: url('fondo-flores.jpg') no-repeat center center;
+  background-size: cover;
+  border-radius: 15px;
+  z-index: 0;
+}
 
-.letter h1 { color:#d6336c; font-size:20px; text-align:center; margin-bottom:12px; }
-.letter img { width:75%; max-width:260px; border-radius:10px; margin-bottom:10px; }
+/* Contenido encima del fondo */
+.letter h1,
+.letter img,
+#message,
+.bouquet-container { position: relative; z-index: 1; }
 
-#message { font-size:15px; line-height:1.5; text-align:center; min-height:70px; margin-bottom:15px; }
+.letter.show {
+  transform: scale(1) translateY(-120px); /* sube más */
+  opacity: 1;
+}
+
+/* TEXTO */
+/* Contenido de la carta más pequeño */
+.letter h1 {
+  font-size: 16px; /* antes 18px */
+  margin-bottom: 8px; /* antes 10px */
+}
+
+.letter img {
+  max-width: 150px; /* antes 200px */
+  margin: 5px auto; /* antes 10px */
+}
+
+#message {
+  font-size: 12px; /* antes 13px */
+  line-height: 1.3; /* antes 1.4 */
+  min-height: 50px; /* antes 60px */
+  margin: 5px 0; /* antes 10px */
+}
 
 .bouquet-container {
-  width:180px;
-  height:auto;
-  background:url('ramo-flores.png') no-repeat center center;
-  background-size:contain;
-  transform: scale(0);
-  opacity:0;
-  transition: all 1s ease;
+  width: 80px; /* antes 100px */
+  margin: 5px auto 0; /* antes 10px */
+}
+.bouquet-container.show {
+  opacity: 1;
+  transform: scale(1);
+}
+.bouquet-container img {
+  width: 100%;
+  border-radius: 8px; /* antes 10px */
 }
 
-.letter.show .bouquet-container {
-  transform: scale(1);
-  opacity:1;
+/* RESPONSIVE */
+@media (max-width: 600px) {
+  .envelope-container { width: 280px; height: 190px; }
+  .letter { padding: 15px; max-width: 90%; }
+  .letter h1 { font-size: 18px; }
+  #message { font-size: 13px; }
+  .letter img { max-width: 200px; }
+  .bouquet-container { width: 100px; }
 }
 </style>
-
+</head>
 <body>
+
 <h2 class="hint" id="hint">Haz click en la carta 💌</h2>
 
 <div class="envelope-container" id="envelopeContainer">
@@ -81,7 +139,10 @@ body.opened {
   <h1>Hola mi amor 💕</h1>
   <img src="foto.jpg" alt="Para ti">
   <div id="message"></div>
-  <div class="bouquet-container"></div>
+  
+  <div class="bouquet-container" id="bouquetContainer">
+    <img src="ramo-flores.png" alt="Ramo de flores">
+  </div>
 </div>
 
 <script>
@@ -91,28 +152,29 @@ Te quiero mas de lo que estas palabras pueden decir.`;
 
 let charIndex = 0;
 function typeWriter() {
-  if(charIndex < message.length){
+  if(charIndex < message.length) {
     const char = message.charAt(charIndex);
     document.getElementById("message").innerHTML += char === "\n" ? "<br>" : char;
     charIndex++;
-    setTimeout(typeWriter,50);
+    setTimeout(typeWriter, 60);
   }
 }
 
-document.getElementById("envelopeContainer").onclick = function(){
-  this.classList.add("open"); // abrir sobre
-  document.getElementById("hint").classList.add("hide"); // ocultar hint
+document.getElementById("envelopeContainer").onclick = function() {
+  this.classList.add("open");
+  this.style.opacity = "0";
+  document.getElementById("hint").classList.add("hide");
 
-  // ocultar carta original
-  const letter = document.getElementById("letter");
-  letter.classList.add("hide");
-
-  // mostrar carta con ramo desde el centro
-  setTimeout(()=>{
-    letter.classList.remove("hide");
+  setTimeout(() => {
+    const letter = document.getElementById("letter");
     letter.classList.add("show");
-    typeWriter();
-  },1200);
+    setTimeout(typeWriter, 500);
+
+    const ramo = document.getElementById("bouquetContainer");
+    setTimeout(()=>{ ramo.classList.add("show"); }, 800);
+  }, 1200);
 };
 </script>
+
 </body>
+</html>
