--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@ body {
 /* TEXTO */
 .letter h1 {
   color: #d6336c;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
   text-align: center;
-  font-size: 17px; /* reducido de 20px */
+  font-size: 20px; /* más pequeño */
 }
 
 /* FOTO */
 .letter img {
   width: 80%;
-  max-width: 250px;
+  max-width: 250px; /* más pequeño */
   display: block;
   margin: 12px auto;
   border-radius: 10px;
@@ -103,17 +103,17 @@ body {
 /* MENSAJE TYPEWRITER */
 #message {
   color: #333;
-  font-size: 12px; /* reducido de 14px */
+  font-size: 14px; /* más pequeño */
   line-height: 1.5;
   text-align: center;
   min-height: 80px;
-  margin: 10px 0;
+  margin: 12px 0;
 }
 
 /* RAMO DE FLORES PNG */
 .bouquet-container {
-  width: 100px; /* reducido de 120px */
-  margin: 12px auto 0;
+  width: 120px;
+  margin: 15px auto 0;
   opacity: 0;
   transform: scale(0);
   transition: all 1s ease;
@@ -132,10 +132,10 @@ body {
 @media (max-width: 600px) {
   .envelope-container { width: 280px; height: 190px; }
   .letter { padding: 15px; max-width: 90%; }
-  .letter h1 { font-size: 16px; }
-  #message { font-size: 11px; }
+  .letter h1 { font-size: 18px; }
+  #message { font-size: 13px; }
   .letter img { max-width: 200px; }
-  .bouquet-container { width: 85px; }
+  .bouquet-container { width: 100px; }
 }
 </style>
 </head>
