--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body {
   position:absolute;
   inset:0;
   background: url('fondo-flores.jpg') no-repeat center center;
-  background-size: cover;
+  background-size: contain; /* cambiado de cover a contain */
   border-radius: 15px;
   z-index: 0;
 }
@@ -87,13 +87,13 @@ body {
   color: #d6336c;
   margin-bottom: 12px;
   text-align: center;
-  font-size: 20px; /* más pequeño */
+  font-size: 20px;
 }
 
 /* FOTO */
 .letter img {
   width: 80%;
-  max-width: 250px; /* más pequeño */
+  max-width: 250px;
   display: block;
   margin: 12px auto;
   border-radius: 10px;
@@ -103,7 +103,7 @@ body {
 /* MENSAJE TYPEWRITER */
 #message {
   color: #333;
-  font-size: 14px; /* más pequeño */
+  font-size: 14px;
   line-height: 1.5;
   text-align: center;
   min-height: 80px;
