--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 body {
   min-height: 100vh;
-  background: #f8b4c6; /* fondo rosado inicial */
+  background: #f8b4c6;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,7 +44,7 @@ body {
 /* CARTA */
 .letter {
   position: relative;
-  background: transparent; /* carta transparente */
+  background: transparent;
   padding: 20px;
   border-radius: 15px;
   max-width: 460px;
@@ -66,7 +66,7 @@ body {
   position:absolute;
   inset:0;
   background: url('fondo-flores.jpg') no-repeat center center;
-  background-size: contain; /* cambiado de cover a contain */
+  background-size: cover; /* vuelve a cover para llenar todo el espacio */
   border-radius: 15px;
   z-index: 0;
 }
@@ -78,16 +78,17 @@ body {
 .bouquet-container { position: relative; z-index: 1; }
 
 .letter.show {
-  transform: scale(1) translateY(-120px); /* sube más */
+  transform: scale(1) translateY(-120px);
   opacity: 1;
 }
 
 /* TEXTO */
 .letter h1 {
-  color: #d6336c;
+  color: white; /* cambiado a blanco */
   margin-bottom: 12px;
   text-align: center;
   font-size: 20px;
+  text-shadow: 0 2px 4px rgba(0,0,0,0.3); /* sombra para legibilidad */
 }
 
 /* FOTO */
@@ -102,12 +103,13 @@ body {
 
 /* MENSAJE TYPEWRITER */
 #message {
-  color: #333;
+  color: white; /* cambiado a blanco */
   font-size: 14px;
   line-height: 1.5;
   text-align: center;
   min-height: 80px;
   margin: 12px 0;
+  text-shadow: 0 2px 4px rgba(0,0,0,0.3); /* sombra para legibilidad */
 }
 
 /* RAMO DE FLORES PNG */
