--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ body {
 .letter {
   position: relative;
   background: transparent;
-  padding: 40px 30px; /* más padding vertical */
+  padding: 20px 30px; /* menos padding arriba */
   border-radius: 15px;
-  max-width: 550px; /* más ancho */
+  max-width: 550px;
   width: 90%;
   aspect-ratio: 3/4;
   margin: 0 auto;
@@ -59,7 +59,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly; /* distribuye mejor el espacio */
+  justify-content: flex-start; /* elementos empiezan desde arriba */
+  gap: 15px; /* espacio controlado entre elementos */
 }
 
 /* Fondo de flores dentro de la carta */
@@ -80,14 +81,14 @@ body {
 .bouquet-container { position: relative; z-index: 1; }
 
 .letter.show {
-  transform: scale(1) translateY(-200px); /* sube mucho más */
+  transform: scale(1) translateY(-200px);
   opacity: 1;
 }
 
 /* TEXTO */
 .letter h1 {
   color: white;
-  margin-bottom: 10px;
+  margin: 0; /* elimina margen extra */
   text-align: center;
   font-size: 26px;
   text-shadow: 0 2px 4px rgba(0,0,0,0.5);
@@ -117,7 +118,7 @@ body {
 /* RAMO DE FLORES PNG */
 .bouquet-container {
   width: 130px;
-  margin: 10px auto 0;
+  margin-top: -20px; /* mueve ramo más arriba */
   opacity: 0;
   transform: scale(0);
   transition: all 1s ease;
@@ -135,7 +136,7 @@ body {
 /* RESPONSIVE */
 @media (max-width: 600px) {
   .envelope-container { width: 280px; height: 190px; }
-  .letter { padding: 30px 20px; max-width: 90%; }
+  .letter { padding: 15px 20px; max-width: 90%; }
   .letter.show { transform: scale(1) translateY(-150px); }
   .letter h1 { font-size: 22px; }
   #message { font-size: 15px; }
