--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body {
 /* TEXTO */
 .letter h1 {
   color: white;
-  margin: -20; /* elimina margen extra */
+  margin: 0; /* título se queda arriba */
   text-align: center;
   font-size: 26px;
   text-shadow: 0 2px 4px rgba(0,0,0,0.5);
@@ -99,7 +99,7 @@ body {
   width: 65%;
   max-width: 300px;
   display: block;
-  margin: 20px auto;
+  margin: 50px auto 0 auto;
   border-radius: 10px;
   box-shadow: 0 6px 15px rgba(0,0,0,0.2);
 }
@@ -111,14 +111,14 @@ body {
   line-height: 1.6;
   text-align: center;
   min-height: 100px;
-  margin: 10px 0;
+  margin: 30px 0;
   text-shadow: 0 2px 4px rgba(0,0,0,0.5);
 }
 
 /* RAMO DE FLORES PNG */
 .bouquet-container {
   width: 130px;
-  margin-top: -0px; /* mueve ramo más arriba */
+  margin-top: 35px; /* mueve ramo más arriba */
   opacity: 0;
   transform: scale(0);
   transition: all 1s ease;
