--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
 .letter {
   position: relative;
   background: transparent;
-  padding: 20px 30px; /* menos padding arriba */
+  padding: 20px 30px;
   border-radius: 15px;
   max-width: 550px;
   width: 90%;
@@ -59,8 +59,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start; /* elementos empiezan desde arriba */
-  gap: 15px; /* espacio controlado entre elementos */
+  justify-content: center;
 }
 
 /* Fondo de flores dentro de la carta */
@@ -76,32 +75,34 @@ body {
 
 /* Contenido encima del fondo */
 .letter h1,
-.letter img,
-#message,
-.bouquet-container { position: relative; z-index: 1; }
+#message { position: relative; z-index: 1; }
 
 .letter.show {
   transform: scale(1) translateY(-200px);
   opacity: 1;
 }
 
+/* CONTENEDOR DE TEXTO */
+.text-container {
+  position: relative;
+  z-index: 1;
+  width: 85%;
+  max-width: 450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding: 30px 20px;
+}
+
 /* TEXTO */
 .letter h1 {
   color: white;
-  margin: 0; /* título se queda arriba */
+  margin: 0;
   text-align: center;
   font-size: 26px;
   text-shadow: 0 2px 4px rgba(0,0,0,0.5);
-}
-
-/* FOTO */
-.letter img {
-  width: 65%;
-  max-width: 300px;
-  display: block;
-  margin: 50px auto 0 auto;
-  border-radius: 10px;
-  box-shadow: 0 6px 15px rgba(0,0,0,0.2);
 }
 
 /* MENSAJE TYPEWRITER */
@@ -111,26 +112,7 @@ body {
   line-height: 1.6;
   text-align: center;
   min-height: 100px;
-  margin: 30px 0;
   text-shadow: 0 2px 4px rgba(0,0,0,0.5);
-}
-
-/* RAMO DE FLORES PNG */
-.bouquet-container {
-  width: 130px;
-  margin-top: 35px; /* mueve ramo más arriba */
-  opacity: 0;
-  transform: scale(0);
-  transition: all 1s ease;
-}
-.bouquet-container.show {
-  opacity: 1;
-  transform: scale(1);
-}
-.bouquet-container img {
-  width: 100%;
-  display: block;
-  border-radius: 10px;
 }
 
 /* RESPONSIVE */
@@ -140,8 +122,7 @@ body {
   .letter.show { transform: scale(1) translateY(-150px); }
   .letter h1 { font-size: 22px; }
   #message { font-size: 15px; }
-  .letter img { max-width: 240px; }
-  .bouquet-container { width: 110px; }
+  .text-container { width: 90%; padding: 20px 15px; }
 }
 </style>
 </head>
@@ -156,12 +137,9 @@ body {
 </div>
 
 <div class="letter" id="letter">
-  <h1>Hola mi amor 💕</h1>
-  <img src="foto.jpg" alt="Para ti">
-  <div id="message"></div>
-  
-  <div class="bouquet-container" id="bouquetContainer">
-    <img src="ramo-flores.png" alt="Ramo de flores">
+  <div class="text-container">
+    <h1>Hola mi amor 💕</h1>
+    <div id="message"></div>
   </div>
 </div>
 
@@ -189,9 +167,6 @@ document.getElementById("envelopeContainer").onclick = function() {
     const letter = document.getElementById("letter");
     letter.classList.add("show");
     setTimeout(typeWriter, 500);
-
-    const ramo = document.getElementById("bouquetContainer");
-    setTimeout(()=>{ ramo.classList.add("show"); }, 800);
   }, 1200);
 };
 </script>
