--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@ body {
 </div>
 
 <script>
-const message = `Esta pagina es solo para ti.
-Gracias por estar conmigo.
-Te quiero mas de lo que estas palabras pueden decir.`;
+const message = `Esto está hecho solo con palabras.
+Quiero mostrarte un poco de mi mundo.
+Y por eso con puro codigo hice esta carta para ti.`;
 
 let charIndex = 0;
 function typeWriter() {
