--- a/index.html
+++ b/index.html
@@ -176,9 +176,31 @@ body {
 </div>
 
 <script>
-const message = `Esto está hecho solo con palabras.
-Quiero mostrarte un poco de mi mundo.
-Y por eso con puro codigo hice esta carta para ti.`;
+const message = `Holi mamorororororo.
+
+A traves de esta carta quise mostrarte mi mundo.
+
+El otro dia te mostre como con palabras hacia muchas cosas,
+y ahora quise enseñarte como esas palabras pueden hacer
+algo lindo para ti, ya que mi mundo es este.
+
+Todo lo que estas viendo lo hice yo mismo.
+
+Te amo mamor.
+
+Se que es poquisimo tiempo lo que literalmente llevamos,
+pero igualmente eso no impedira que pueda
+hacerte cosas como estas,
+donde pueda mostrarte de distintas maneras cuanto te amo
+y cuanto puedo amarte de aqui para siempre.
+
+Se que esto no esta a la altura de las ultimas cosas
+que te llegue a hacer en su momento,
+pero igualmente quise darte algo
+porque tu representas todo mi mundo.
+
+Te amo y siempre lo haré.`;
+
 
 let charIndex = 0;
 function typeWriter() {
