--- a/index.html
+++ b/index.html
@@ -180,11 +180,18 @@ let charIndex = 0;
 
 function typeWriter() {
   if (charIndex < message.length) {
-    document.getElementById("message").textContent += message.charAt(charIndex);
+    const char = message.charAt(charIndex);
+    document.getElementById("message").textContent += char;
     charIndex++;
-    setTimeout(typeWriter, 20);
+
+    let speed = 30;
+    if (char === "." || char === ",") speed = 120;
+    if (char === "\n") speed = 200;
+
+    setTimeout(typeWriter, speed);
   }
 }
+
 
 document.getElementById("envelopeContainer").onclick = function() {
   this.classList.add("open");
