--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@ body {
 .letter {
   position: relative;
   background: transparent;
-  padding: 20px 30px;
+  padding: 40px 30px;   /* un poco mas de aire */
   border-radius: 15px;
   max-width: 550px;
   width: 90%;
-  aspect-ratio: 3/4;
   margin: 0 auto;
   box-shadow: 0 20px 40px rgba(0,0,0,0.3);
   transform: scale(0.55) translateY(0);
   opacity: 0;
   transition: all 1.2s ease;
-  overflow: hidden;
+  overflow: visible;   /* ya no corta nada */
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
+
 
 /* Fondo de flores */
 .letter::before {
