--- a/index.html
+++ b/index.html
@@ -2,89 +2,208 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Para ti 💌</title>
 <style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, sans-serif;
-}
+* { margin: 0; padding: 0; box-sizing: border-box; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
 
 body {
   min-height: 100vh;
-  background: url("fondo-flores.jpg") center/cover no-repeat;
+  background: #f8b4c6;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  overflow-y: scroll;
-}
-
-.marco {
-  width: 420px;
-  height: 720px;
-  background: #1e1e1e;
-  border: 3px solid #ddd;
-  border-radius: 12px;
+  justify-content: flex-start;
   padding: 20px;
+  overflow-x: hidden;
+}
+
+/* TEXTO HINT */
+.hint {
+  color: white;
+  font-size: 20px;
+  margin-bottom: 20px;
+  text-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  animation: float 2s infinite;
+  transition: all 0.8s;
+  z-index: 10;
+}
+.hint.hide { opacity: 0; transform: translateY(-30px); }
+@keyframes float { 0%,100% {transform:translateY(0);} 50% {transform:translateY(-8px);} }
+
+/* SOBRE */
+.envelope-container { width: 320px; height: 220px; position: relative; cursor: pointer; margin-bottom: 40px; z-index: 2; }
+.envelope { width: 100%; height: 100%; background: #ff6f91; border-radius: 8px; position: relative; overflow: hidden; box-shadow: 0 15px 35px rgba(0,0,0,0.3); transition: transform 0.3s; animation: idle 3s infinite ease-in-out; }
+.envelope:hover { transform: scale(1.02); }
+@keyframes idle { 0%,100%{transform:scale(1);}50%{transform:scale(1.05);} }
+.flap { position:absolute; top:0; left:0; width:100%; height:100%; background:#ff8fab; clip-path: polygon(0 0, 100% 0, 50% 50%); transform-origin:top center; transition: transform 1.2s ease; z-index:3; }
+.envelope-container.open .envelope { animation: chest 1s forwards; }
+.envelope-container.open .flap { transform: rotateX(180deg); }
+@keyframes chest {0%{transform:scale(1);}30%{transform:scale(1.1) rotate(2deg);}50%{transform:scale(1.15) rotate(-2deg);}70%{transform:scale(1.1) rotate(2deg);}100%{transform:scale(1); }}
+
+/* CARTA */
+.letter {
   position: relative;
+  background: transparent;
+  padding: 20px 30px;
+  border-radius: 15px;
+  max-width: 550px;
+  width: 90%;
+  aspect-ratio: 3/4;
+  margin: 0 auto;
+  box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+  transform: scale(0.55) translateY(0);
+  opacity: 0;
+  transition: all 1.2s ease;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* FIX 1 */
 }
 
-/* area donde va tu contenido */
-.contenido {
-  width: 100%;
-  height: 520px;   /* LIMITE REAL */
+/* Fondo de flores */
+.letter::before {
+  content:"";
+  position:absolute;
+  inset:0;
+  background: url('fondo-flores.jpg') no-repeat center center;
+  background-size: 100% 100%;
+  border-radius: 15px;
+  z-index: 0;
+}
+
+.letter h1,
+#message { position: relative; z-index: 1; }
+
+.letter.show {
+  transform: scale(1) translateY(-200px);
+  opacity: 1;
+}
+
+/* CONTENEDOR CON SCROLL */
+.text-container {
+  position: relative;
+  z-index: 1;
+  width: 85%;
+  max-width: 450px;
+  height: 60%;              /* FIX 2 */
   overflow-y: auto;
-  padding-right: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding: 30px 20px 140px; /* espacio para el gato */
 }
 
-/* imagen minecraft */
-.contenido img {
-  width: 100%;
-  border-radius: 6px;
-  margin-bottom: 15px;
+/* Scroll invisible */
+.text-container::-webkit-scrollbar {
+  width: 0;
 }
 
-/* texto */
-.contenido p {
-  color: #eee;
+/* TITULO */
+.letter h1 {
+  color: #fff;
+  margin: 0;
+  text-align: center;
+  font-size: 26px;
+  text-shadow: 
+    0 0 10px #ff6f91,
+    0 0 20px #ff6f91,
+    0 0 40px #ff1493;
+  animation: neon-flicker 1.5s infinite alternate;
+}
+
+@keyframes neon-flicker {
+  0%,100% { text-shadow: 0 0 10px #ff6f91, 0 0 20px #ff6f91, 0 0 40px #ff1493; }
+  50% { text-shadow: none; }
+}
+
+/* MENSAJE */
+#message {
+  color: #fff;
+  font-size: 17px;
   line-height: 1.6;
-  margin-bottom: 12px;
-}
-
-/* zona muerta del gato */
-.zona-gato {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 140px;
-  pointer-events: none;
+  text-align: center;
+  min-height: 100px;
+  white-space: pre-line;
+  text-shadow: 
+    0 0 10px #ff6f91,
+    0 0 20px #ff6f91,
+    0 0 40px #ff1493;
 }
 </style>
 </head>
-
 <body>
 
-<div class="marco">
-  
-  <div class="contenido">
-    <img src="minecraft.jpg">
-    
-    <p>Este es tu mensaje largo...</p>
-    <p>Puedes escribir lo que quieras aqui</p>
-    <p>Y jamas va a bajar hasta el gato</p>
-    <p>Porque el scroll se activa antes</p>
-    <p>Lorem ipsum lorem ipsum lorem ipsum</p>
-    <p>Lorem ipsum lorem ipsum lorem ipsum</p>
-    <p>Lorem ipsum lorem ipsum lorem ipsum</p>
-    <p>Lorem ipsum lorem ipsum lorem ipsum</p>
+<h2 class="hint" id="hint">Haz click en la carta 💌</h2>
+
+<div class="envelope-container" id="envelopeContainer">
+  <div class="envelope">
+    <div class="flap"></div>
   </div>
-
-  <!-- zona protegida -->
-  <div class="zona-gato"></div>
-
 </div>
+
+<div class="letter" id="letter">
+  <div class="text-container">
+    <h1>Hola mi amor 💕</h1>
+    <div id="message"></div>
+  </div>
+</div>
+
+<script>
+const message = `Holi mamorororororo.
+
+A traves de esta carta quise mostrarte mi mundo.
+
+El otro dia te mostre como con palabras hacia muchas cosas,
+y ahora quise enseñarte como esas palabras pueden hacer
+algo lindo para ti, ya que mi mundo es este.
+
+Todo lo que estas viendo lo hice yo mismo.
+
+Te amo mamor.
+
+Se que es poquisimo tiempo lo que literalmente llevamos,
+pero igualmente eso no impedira que pueda
+hacerte cosas como estas,
+donde pueda mostrarte de distintas maneras cuanto te amo
+y cuanto puedo amarte de aqui para siempre.
+
+Se que esto no esta a la altura de las ultimas cosas
+que te llegue a hacer en su momento,
+pero igualmente quise darte algo
+porque tu representas todo mi mundo.
+
+Te amo y siempre lo haré.`;
+
+let charIndex = 0;
+
+function typeWriter() {
+  if (charIndex < message.length) {
+    const char = message.charAt(charIndex);
+    document.getElementById("message").textContent += char;
+    charIndex++;
+
+    let speed = 35;
+    if (char === "." || char === ",") speed = 140;
+    if (char === "\n") speed = 220;
+
+    setTimeout(typeWriter, speed);
+  }
+}
+
+document.getElementById("envelopeContainer").onclick = function() {
+  this.classList.add("open");
+  this.style.opacity = "0";
+  document.getElementById("hint").classList.add("hide");
+
+  setTimeout(() => {
+    const letter = document.getElementById("letter");
+    letter.classList.add("show");
+    setTimeout(typeWriter, 500);
+  }, 1200);
+};
+</script>
 
 </body>
 </html>
