--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ body {
   align-items: center;
   gap: 20px;
   padding: 30px 20px 140px; /* espacio para el gato */
+  margin-top: 60px;
 }
 
 /* Scroll invisible */
